overflow issue solved

--- a/src/sections/Main/Main.css
+++ b/src/sections/Main/Main.css
@@ -169,6 +169,7 @@ text-align: left;
 /* Mobile Version */
 @media screen and (max-width : 768px) and (min-width : 310px){
     .main-container{
+        position: relative;
         height: 100vh;
         overflow-x: hidden !important;
     }
